fix: correct the vertical spacing

--- a/src/styles/layout/_navigation.scss
+++ b/src/styles/layout/_navigation.scss
@@ -43,6 +43,7 @@
     @include tablet-up {
       display: inline-block;
       text-transform: uppercase;
+      line-height: 1;
 
       .title {
         color: $text-clr-2;
